php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29896 Backtrace argument list out of sync
Submitted: 2004-08-30 14:14 UTC Modified: 2005-06-22 17:31 UTC
Votes:6
Avg. Score:4.3 ± 0.7
Reproduced:6 of 6 (100.0%)
Same Version:1 (16.7%)
Same OS:2 (33.3%)
From: terry at pothecary dot com Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2005-06-19 OS: *
Private report: No CVE-ID: None
 [2004-08-30 14:14 UTC] terry at pothecary dot com
Description:
------------
If you call and enumerate the information from a debug_backtrace() in a user error handler then the argument list is out of step with the other information.

Reproduce code:
---------------
function userErrorHandler($num, $msg, $file, $line, $vars)
{
    debug_print_backtrace();
}

$OldErrorHandler = set_error_handler("userErrorHandler");


function GenerateError1($A1)
{
    $a = $b;
}

function GenerateError2($A1)
{
    GenerateError1("Test1");
}

GenerateError2("Test2");


Expected result:
----------------
I expect the final line in the backtrace to show a call of:
GenerateError2(Test2)


Actual result:
--------------
The final line in the backtrace shows a call of:
GenerateError2(Test1)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-06-22 17:31 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_0.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 20 19:00:02 2026 UTC