Fixed bug #29896 (Backtrace argument list out of sync)